--- a/MoppApp/MoppApp/LaunchScreen.xib
+++ b/MoppApp/MoppApp/LaunchScreen.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,43 +13,24 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_mobile" translatesAutoresizingMaskIntoConstraints="NO" id="9jh-n5-N83">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="299"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="App_logo" translatesAutoresizingMaskIntoConstraints="NO" id="8iQ-dx-iZM">
+                    <rect key="frame" x="107.5" y="20" width="160" height="627"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="9jh-n5-N83" secondAttribute="height" multiplier="64:51" id="naP-nr-Y2x"/>
-                    </constraints>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo_Suur" translatesAutoresizingMaskIntoConstraints="NO" id="eDH-N0-191">
-                    <rect key="frame" x="67.5" y="212.5" width="240" height="242"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="242" id="e0u-SU-cSs"/>
-                        <constraint firstAttribute="width" constant="240" id="yge-QE-ZZl"/>
-                    </constraints>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Struktuurifondid" translatesAutoresizingMaskIntoConstraints="NO" id="ktb-J3-ngC">
-                    <rect key="frame" x="0.0" y="533" width="375" height="110"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="110" id="R0U-DD-9Zx"/>
+                        <constraint firstAttribute="width" constant="160" id="Pxn-Ap-L1t"/>
                     </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="9jh-n5-N83" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="6py-7i-Kng"/>
-                <constraint firstItem="eDH-N0-191" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="MW3-T4-fq7"/>
-                <constraint firstAttribute="trailing" secondItem="ktb-J3-ngC" secondAttribute="trailing" id="Umy-cx-rxz"/>
-                <constraint firstItem="9jh-n5-N83" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="YRa-O5-60o"/>
-                <constraint firstAttribute="bottom" secondItem="ktb-J3-ngC" secondAttribute="bottom" constant="24" id="iCl-fZ-zI0"/>
-                <constraint firstAttribute="trailing" secondItem="9jh-n5-N83" secondAttribute="trailing" id="tpW-vp-Roo"/>
-                <constraint firstItem="ktb-J3-ngC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wkc-CA-pqd"/>
-                <constraint firstItem="eDH-N0-191" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="xC6-Gu-w7w"/>
+                <constraint firstItem="8iQ-dx-iZM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" symbolic="YES" id="2xe-7p-ao4"/>
+                <constraint firstAttribute="bottom" secondItem="8iQ-dx-iZM" secondAttribute="bottom" constant="20" symbolic="YES" id="7OT-rW-kj4"/>
+                <constraint firstItem="8iQ-dx-iZM" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="KZ4-An-Ynh"/>
+                <constraint firstItem="8iQ-dx-iZM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="sWY-Aj-am6"/>
             </constraints>
-            <point key="canvasLocation" x="34.5" y="53.5"/>
+            <point key="canvasLocation" x="55.200000000000003" y="48.125937031484263"/>
         </view>
     </objects>
     <resources>
-        <image name="Logo_Suur" width="144" height="178"/>
-        <image name="Struktuurifondid" width="156" height="91"/>
-        <image name="bg_mobile" width="320" height="255"/>
+        <image name="App_logo" width="1024" height="1024"/>
     </resources>
 </document>
